--- a/app/views/layouts/patient.html.erb
+++ b/app/views/layouts/patient.html.erb
@@ -16,7 +16,7 @@
         display: flex;
         justify-content: space-around;
       }
-      
+
       /* Add a hover effect for buttons */
       button:hover {
           opacity: 0.8;
@@ -43,10 +43,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Ricochet</a>
+        <a class="navbar-brand" href="/">Ricochet</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <% if patient_signed_in? %>
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Discussion Board <span class="sr-only">(current)</span></a></li>
           <li><a href="#">My Page </a></li>
@@ -64,22 +65,46 @@
               <li><a href="#">One more separated link</a></li>
             </ul>
           </li>
+          <li><a href="/home/index2">Discussion Board <span class="sr-only">(current)</span></a></li>
+          <li><a href="/home/patientlist/<%=current_patient.id %>">My Page </a></li>
         </ul>
         <form class="navbar-form navbar-left">
         </form>
-        <% if user_signed_in? %>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Account Settings</a></li>
-            <li><a href="/users/sign_out">Logout</a></li>
-          </ul>
-        <% end %>
-      </li>
-    </ul>
-  </div>
-  <!-- /.navbar-collapse -->
-</div>
-<!-- /.container-fluid -->
-</nav>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/home/settings/:id">Account Settings</a></li>
+
+          <li><a href="/users/sign_out">Logout</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+  <% end %>
 <%= yield %>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+<script>
+
+
+         $(document).ready(function()
+      {
+        var navItems = $('.admin-menu li > a');
+        var navListItems = $('.admin-menu li');
+        var allWells = $('.admin-content');
+        var allWellsExceptFirst = $('.admin-content:not(:first)');
+        allWellsExceptFirst.hide();
+        navItems.click(function(e)
+        {
+            e.preventDefault();
+            navListItems.removeClass('active');
+            $(this).closest('li').addClass('active');
+            allWells.hide();
+            var target = $(this).attr('data-target-id');
+            $('#' + target).show();
+        });
+        });
+</script>
 </body>
-</html> -->
+</html>
