--- a/app/views/layouts/blank.html.erb
+++ b/app/views/layouts/blank.html.erb
@@ -67,7 +67,7 @@
 
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Account Settings</a></li>
+          <li><a href="/home/docsettings">Account Settings</a></li>
 
           <li><a href="/users/sign_out">Logout</a></li>
             </ul>
