--- a/app/views/home/patient_detail.html.erb
+++ b/app/views/home/patient_detail.html.erb
@@ -1,12 +1,39 @@
-<h1><%= @patient.id %>번 <%= @patient.email %> 입니다 </h1>
-<h2>코멘트 달기</h2>
-<form action="/home/patient_comment/<%=@patient.id%>" method="post">
-  <label for="exampleInputEmail1">댓글 </label>
-  <textarea name="putcomment" class="form-control" rows="3" placeholder="내용"></textarea>
-  <br>
-  <button type="submit" class="btn btn-default">Submit</button>
-  <% @patient.detailcoms.each do |pc| %>
-    <li> : <%= pc.content %></li>
-  <% end %>
-</form>
-<br>
+<div class="container">
+  <div class="container">
+            <% if user_signed_in? %>
+              <h1><%= @patient.id %>번 <%= @patient.email %> 입니다 </h1><br>
+            <% else %>
+              <h1>My Page </h1><br>
+            <% end %>
+    <br><br>
+    <h3>Treatment Progress for <b>Tuberculosis</b></h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+        <span class="sr-only">45% Complete</span>
+      </div>
+    </div>
+    <h3>Treatment Progress for <b>Diabetes Type II</b></h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+        <span class="sr-only">20% Complete</span>
+      </div>
+    </div>
+    <br>
+    <h2>Updates</h2>
+    <% if user_signed_in? %>
+    <form action="/home/patient_comment/<%=@patient.id%>" method="post">
+      <label for="exampleInputEmail1">Notifications </label>
+      <textarea name="putcomment" class="form-control" rows="3" placeholder="Content"></textarea>
+      <br>
+      <button type="submit" class="btn btn-default">Submit</button><br>
+    <% end %><br>
+    <br>
+    <% @patient.detailcoms.reverse_each do |pc| %>
+    <div class="alert alert-success" role="alert"> <%= pc.content %>
+        <% if user_signed_in? %>
+          <a href="#">Delete</a>
+        <% end %>
+    </div>
+    <% end %>
+    </form>
+  </div>
