--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         display: flex;
         justify-content: space-around;
       }
-      
+
       /* Add a hover effect for buttons */
       button:hover {
           opacity: 0.8;
@@ -45,22 +45,9 @@
         <% if user_signed_in? %>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Discussion Board <span class="sr-only">(current)</span></a></li>
+              <li><a href="/home/index">Discussion Board <span class="sr-only">(current)</span></a></li>
               <li><a href="/home/index">My Page </a></li>
               <li><a href="/home/patientlist">Patient List </a></li>
-              <li><a href="#">Treatment Plan </a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
             </ul>
             <form class="navbar-form navbar-left">
             </form>
