--- a/app/views/layouts/blank.html.erb
+++ b/app/views/layouts/blank.html.erb
@@ -16,7 +16,7 @@
         display: flex;
         justify-content: space-around;
       }
-      
+
       /* Add a hover effect for buttons */
       button:hover {
           opacity: 0.8;
@@ -41,30 +41,27 @@
           </button>
           <a class="navbar-brand" href="/">Ricochet</a>
         </div>
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#">Discussion Board <span class="sr-only">(current)</span></a></li>
+            <li><a href="/home/index">Discussion Board </a></li>
             <li><a href="/home/index">My Page </a></li>
             <li><a href="/home/patientlist">Patient List </a></li>
-            <li><a href="#">Treatment Plan </a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            </li>
           </ul>
           <form class="navbar-form navbar-left">
+
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/home/docsettings">Account Settings</a></li>
+
             <li><a href="/users/sign_out">Logout</a></li>
+              </ul>
+            </li>
           </ul>
-        </li>
-      </ul>
-    </div>
-    <!-- /.navbar-collapse -->
-  </div>
-  <!-- /.container-fluid -->
-</nav>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
 <%= yield %>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
@@ -93,7 +90,7 @@
 <script>
   $(document).ready(function(){
     var table = $('#myTable').DataTable();
-  
+
     $('#myTable tbody').on('click', 'tr', function () {
         var data = table.row( this ).data();
         window.location.href = "/home/patientlist/"+data[1];
